Fix elements align

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -2,6 +2,9 @@
 
     color: black !important;
 
+    .about-nav-title {
+        font-weight: bold;
+    }
     .button-block {
         margin-left: 12px;
     }
