--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -3,6 +3,14 @@
     p {
         text-align: justify;
     }
+
+    .text-uppercase {
+        font-size: medium;
+    }
+
+    .mat-card-title {
+        margin-left: 10px;
+    }
     .cancel-button {
         color: white !important;
         margin-bottom: 20px;
